# mcp-gtm

./: .gitignore  GATE2_CHECKLIST.md  README.md  pyproject.toml
src/gtm_mcp/: __init__.py  __main__.py  auth.py  config.py  server.py
src/gtm_mcp/api/: client.py  errors.py
src/gtm_mcp/safety/: audit.py  guards.py
src/gtm_mcp/tools/: accounts.py  audit_log.py  built_in_vars.py  containers.py  folders.py  tags.py  templates.py  triggers.py  variables.py  versions.py  workspaces.py
tests/: conftest.py
tests/integration/: conftest.py  test_auth.py  test_error_handling.py  test_read_flow.py
tests/unit/: conftest.py  test_accounts.py  test_audit.py  test_audit_log.py  test_auth_scopes.py  test_built_in_vars.py  test_config.py  test_containers.py  test_errors.py  test_safety.py  test_startup.py  test_tags.py  test_triggers.py  test_variables.py  test_versions.py  test_workspaces.py
