[project]
name = "gtm-mcp"
version = "0.1.0"
description = "MCP server for Google Tag Manager — read-only tools (Gate 1)"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "fastmcp>=3.0.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
gtm-mcp = "gtm_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gtm_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "integration: requires GTM API credentials (skip if not configured)",
]
